--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,11 @@
             <artifactId>selenium-java</artifactId>
             <version>4.39.0</version>
         </dependency>
-
+<dependency>
+    <groupId>io.github.bonigarcia</groupId>
+    <artifactId>webdrivermanager</artifactId>
+    <version>5.6.3</version>
+</dependency>
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
